# quackgis

./: .dockerignore  .gitattributes  .gitignore  ARCHITECTURE.md  CHANGELOG.md  COMPATIBILITY.md  CONTRIBUTING.md  Cargo.toml  DIVERGENCE.md  EXAMPLES.md  EXAMPLES_DUCKLAKE.md  Justfile  LICENSE  NOTICE  README.md  ROADMAP.md  SECURITY.md  THIRD_PARTY_LICENSES.md  docker-bake.hcl  docker-compose.yml  mise.toml
.github/workflows/: benchmark-ladder.yml  ci-artifacts.yml  ci.yml  compatibility.yml  postgis-regress.yml  release.yml  storage-smoke.yml
benchmarks/: BENCHMARKS.md  backends.sql  bridge.sql  layout_benchmark.sh  perf_budget.sql  run.sh  run_queries.sh  scale_harness.sh  scale_report.sh  setup_lake.sql  snapshot.sh  spatialbench_full.sql  spatialbench_lake.sql
benchmarks/profiles/: layoutbench-regional-r100m-v1.json
ci/: Containerfile  all-checks.sh  check.sh  container-build.sh  container-test.sh  package-and-smoke.sh
container/: Dockerfile  Dockerfile.dev  build.sh  dev-build.sh  entrypoint.sh  generate-stubs.sh  run-all-tests.sh  run-postgis-fixtures.sh  smoke-test.sh  test-backup.sh  test-compat.sh  test-ducklake.sh
container/init.d/: 0000-preload.sh  0001-create-extension.sql  0002-configure.sql  0003-load-sedonadb.sql  0007-layout.sql  (+3 more)
crates/quackgis-edge/: Cargo.toml
crates/quackgis-edge/src/: compression.rs  config.rs  lib.rs  runtime.rs
crates/quackgis-edge/tests/: direct_path.rs  relay_path.rs  transport_profile.rs
crates/quackgis-migrate/: Cargo.toml
crates/quackgis-migrate/src/: config.rs  connect.rs  inventory.rs  lib.rs  main.rs  migration.rs  plan.rs  report.rs  runtime.rs  source.rs
crates/quackgis-rest/: Cargo.toml
crates/quackgis-rest/src/: main.rs
crates/quackgis-server/: Cargo.toml  README.md
crates/quackgis-server/examples/: api_client_probe.rs  developer_preview.rs  layoutbench.rs  seed_demo.rs
crates/quackgis-server/probes/: pg_catalog-readiness.md
crates/quackgis-server/src/: audit.rs  auth.rs  catalog_compat.rs  catalog_metrics.rs  cli.rs  context.rs  duckdb_adbc_storage.rs  ducklake_sql.rs  engine.rs  engine_api.rs  execution_control.rs  geometry_columns.rs  lib.rs  lifecycle.rs  main.rs  metrics.rs  mvt.rs  pgwire_server.rs  postgis_compat.rs  postgres_compat.rs  public_schema.rs  qgis_compat.rs  role.rs  spatial_compat.rs  spatial_udfs.rs  statement_policy.rs  storage_authority.rs
crates/quackgis-server/src/catalog_compat/: cursors.rs  encoding.rs  geotools.rs  params.rs  pg_attribute.rs  pg_class.rs  pg_index.rs  pg_type.rs  pgjdbc.rs  sql_parse.rs  surfaces.rs
crates/quackgis-server/src/ducklake_sql/: layout.rs  names.rs  params.rs  pruning.rs  rewrites.rs
crates/quackgis-server/src/pgwire_server/: copy_text.rs  duckdb.rs
crates/quackgis-server/tests/: catalog_contract.rs  development_ducklake.rs  duckdb_adbc_storage.rs  duckdb_wire_read.rs  ducklake_persistence.rs  iroh_direct.rs  layoutbench_sf0.rs  martin_compat.rs  martin_fixture_probe.rs  martin_real_e2e.rs  multimodal_inventory.rs  orphan_inventory.rs  pinned_ducklake.rs  postgis_regress.rs  process_lifecycle.rs  roadmap_profiles.rs  wire_spatial.rs
crates/quackgis-server/tests/common/: mod.rs
crates/quackgis-server/tests/support/: evidence.rs  mod.rs  runtime.rs
deploy/: Containerfile  Containerfile.duckdb-runtime  Containerfile.kind-clients  Containerfile.runtime  image-report.sh  kind-build.sh  kind-cluster.yaml  release.sh  setup-buildkit.sh  test-kind.sh
docs/: ALPHA_EXTERNAL_SERVICES.md  ANALYTICS_BENCHMARKS.md  API_CLIENT_PROBES.md  COMPATIBILITY.md  COMPATIBILITY_MATRIX.md  DEPENDENCIES.md  DEPENDENCY_POLICY.md  DEVELOPER_PREVIEW.md  DEVELOPMENT_DUCKLAKE.md  DUCKDB_ADBC_EVALUATION.md  DUCKDB_PGWIRE_CHECKPOINT.md  DUCKDB_ROADMAP_ALIGNMENT.md  DUCKDB_SPATIAL_GAP_LEDGER.md  DUCKLAKE_ALIGNMENT.md  DUCKLAKE_SPATIAL_LAYOUT.md  ENGINE_CAPABILITY_LEDGER.md  HISTORY.md  IROH_TRANSPORT.md  LOCAL_KIND_LINKERD_FOCUS.md  METRICS_TRENDS.md  MIGRATION.md  MULTIMODAL_ASSETS.md  MUTATION_FAILURE_DRILLS.md  NATIVE_BUNDLE.md  NATIVE_DML_FORK_PLAN.md  OPERATIONS.md  OSM_POSTGIS_PARITY.md  PINNED_DUCKLAKE.md  POSTGIS_CONFORMANCE.md  POSTGIS_MIGRATION.md  POSTGRESQL_COMPATIBILITY.md  PROJECT_DIRECTION.md  QUICKSTART.md  REAL_DATA_CLIENT_MATRIX.md  RELEASE_CHECKLIST.md  RELEASE_EVIDENCE.md  REST_API.md  ROADMAP_STATUS.md  SCALE_REPORT.md  SECURITY_RBAC.md  (+5 more)
examples/: README.md
native/: bundle.json  extension_config.cmake  upstream-review.json
pg_geometry/: Makefile  quackgis_type--1.0.sql  quackgis_type.c  quackgis_type.control
scripts/: benchmark_profile_check.py  bootstrap_duckdb.py  build_native_bundle.py  build_pinned_ducklake.py  check_native_upstreams.py  duckdb_authority_probe.py  duckdb_catalog_identity_probe.py  duckdb_engine_probe.py  duckdb_local_backup.py  duckdb_reference_evidence_check.py  duckdb_runtime_static_check.py  duckdb_spatial_compat_probe.py  evidence_manifest_check.py  external_alpha_evidence_check.py  layoutbench_catalog_report.py  metrics_budget_check.py  multimodal_inventory_evidence_check.py  native_bundle.py  package_native_bundle.py  postgis_conformance_summary.py  postgis_migration_smoke.py  prepare_duckdb_runtime.py  prepare_native_bundle.py  probe_static_check.py  project_contract_check.py  project_doctor.py  quackgis-client-smoke.sh  quackgis-compose.sh  quackgis-http-smoke.sh  quackgis-multi-compose.sh  quackgis-multi-smoke.sh  quackgis-plan.sh  quackgis-smoke.sh  quackgis-transport-smoke.sh  runtime_static_check.py  trend_metrics.py  wait_for_tcp.py
spike/: .gitignore
spike/m00-wire-spike/: Cargo.toml  FINDINGS.md  README.md
spike/m00-wire-spike/src/: main.rs
sql/: ducklake_spatial_macros.sql
src/: bridge.rs  dispatch.rs  dump.rs  functions.rs  geometry.rs  geos_backend.rs  lib.rs  raster.rs  registry.rs  rewriter.rs  spatial_join.rs  spatial_keys.rs
tests/: README.md  all_functions.sql  duckdb_spatial_compat.json  edge_cases.sql  fidelity.sql  raster.sql  run-postgis-regress.sh  run_sql.sh  sedona_bridge.sql  vector_encodings.sql
tools/: catalog_audit.py  import_upstream_tests.py  postgis_rewriter.py
(+201 files in other folders)
