# SPDX-License-Identifier: Apache-2.0
#
# QuackGIS workspace. See ARCHITECTURE.md for the layer model and
# DIVERGENCE.md for the fork ledger driving dependency decisions.
#
[workspace]
resolver = "2"
members = ["crates/quackgis-server"]

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.95"
license = "Apache-2.0"
authors = ["QuackGIS contributors"]
repository = "https://github.com/adonm/quackgis"
homepage = "https://github.com/adonm/quackgis"
description = "PostGIS-compatible DuckDB spatial lakehouse server on official DuckLake"
readme = "README.md"
keywords = ["gis", "geospatial", "postgis", "duckdb", "ducklake"]
categories = ["database", "science::geo"]
publish = false

[workspace.dependencies]
arrow-array = "58"
arrow-schema = "58"
arrow-pg = { path = "vendor/arrow-pg", version = "0.14.0" }
pgwire = { version = "0.40", default-features = false, features = ["server-api-ring", "pg-ext-types"] }
sqlparser = { version = "=0.62.0", features = ["visitor"] }

# ADBC 0.23 provides Arrow 58 RecordBatches. The DuckDB driver itself is loaded
# at runtime from an operator-pinned libduckdb shared library.
adbc_core = "=0.23.0"
adbc_driver_manager = "=0.23.0"
sha2 = "0.10"

# Generic runtime / utility crates.
tokio = { version = "1.52", features = ["fs", "macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
tokio-rustls = { version = "0.26", default-features = false, features = ["ring"] }
rustls-pemfile = "2.2"
rustls-pki-types = "1.15"
env_logger = "0.11"
log = "0.4"
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
tempfile = "3"
futures = "0.3"
regex = "1"
async-trait = "0.1"
chrono = { version = "0.4", default-features = false, features = ["std"] }

[profile.release]
strip = true
lto = "thin"
codegen-units = 1
