# SPDX-License-Identifier: Apache-2.0
[package]
name = "quackgis-edge"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Authenticated iroh edge protocol for QuackGIS"
publish.workspace = true

[dependencies]
iroh = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
