# SPDX-License-Identifier: Apache-2.0
[package]
name = "quackgis-migrate"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Fail-closed offline PostGIS migration for QuackGIS"
publish.workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
sqlparser = { workspace = true }
