# SPDX-License-Identifier: Apache-2.0
[package]
name = "quackgis-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PostGIS-compatible Sedona-powered OLAP spatial lakehouse database on DuckLake"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true

[[bin]]
name = "quackgis-server"
path = "src/main.rs"

[lib]
name = "quackgis_server"
path = "src/lib.rs"

[dependencies]
datafusion-postgres = { workspace = true }
datafusion = { workspace = true }
datafusion-expr-common = { workspace = true }
datafusion-functions-aggregate-common = { workspace = true }
arrow-ord = { workspace = true }
arrow-select = { workspace = true }
sedona-functions = { workspace = true }
sedona-geo = { workspace = true }
sedona-proj = { workspace = true }
sedona-geometry = { workspace = true }
geo-traits = { workspace = true }
datafusion-ducklake = { workspace = true }
object_store = { workspace = true }
url = { workspace = true }
sqlx = { workspace = true }

tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
proj-wkt = { workspace = true }
proj-core = { workspace = true }
regex = { workspace = true }
rust_decimal = "1.42"

[dev-dependencies]
# Pure-Rust pg client for integration tests (no psql binary required in CI).
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime"] }
# Each wire test runs against its own fresh DuckLake catalog in a tempdir.
tempfile = { workspace = true }
