# SPDX-License-Identifier: Apache-2.0
[package]
name = "quackgis-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "PostGIS-compatible DuckDB spatial lakehouse server on official DuckLake"
readme.workspace = true
keywords.workspace = true
categories.workspace = true
publish.workspace = true
autotests = false

[[bin]]
name = "quackgis-server"
path = "src/main.rs"

[lib]
name = "quackgis_server"
path = "src/lib.rs"

[[test]]
name = "duckdb_adbc_storage"
path = "tests/duckdb_adbc_storage.rs"

[[test]]
name = "development_ducklake"
path = "tests/development_ducklake.rs"

[[test]]
name = "duckdb_wire_read"
path = "tests/duckdb_wire_read.rs"

[[test]]
name = "roadmap_profiles"
path = "tests/roadmap_profiles.rs"

[[test]]
name = "catalog_contract"
path = "tests/catalog_contract.rs"

[dependencies]
arrow-pg = { workspace = true }
pgwire = { workspace = true }
sqlparser = { workspace = true }
arrow-array = { workspace = true }
arrow-schema = { workspace = true }
adbc_core = { workspace = true }
adbc_driver_manager = { workspace = true }
sha2 = { workspace = true }

tokio = { workspace = true }
tokio-rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-pki-types = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
async-trait = { workspace = true }
futures = "0.3"
chrono = { workspace = true }
memchr = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rust_decimal = "1.42"

[dev-dependencies]
# Pure-Rust pg client for integration tests (no psql binary required in CI).
tokio-postgres = { version = "0.7", default-features = false, features = ["runtime"] }
tokio-postgres-rustls = { version = "0.14", features = ["ring"] }
rustls = { workspace = true }
rcgen = "0.14"
# Each wire test runs against its own fresh DuckLake catalog in a tempdir.
tempfile = { workspace = true }
libc = "0.2"
sha2 = { workspace = true }
bytes = "1"
regex = { workspace = true }
